# ChangeLog for app-misc/bfr
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/bfr/ChangeLog,v 1.21 2014/10/12 14:23:34 jlec Exp $

*bfr-1.6-r2 (12 Oct 2014)

  12 Oct 2014; Justin Lecher <jlec@gentoo.org> +bfr-1.6-r2.ebuild,
  +files/bfr-1.6-perl.patch:
  Add fix for newer perl, #513406; thanks womble@online.de for the patch

  04 Jan 2011; Justin Lecher <jlec@gentoo.org> bfr-1.6-r1.ebuild:
  Some Clean up

  26 Aug 2010; Jeroen Roovers <jer@gentoo.org> bfr-1.6-r1.ebuild:
  Change HOMEPAGE thanks to MAL (bug #334545).

  13 Apr 2009; Michael Sterrett <mr_bones_@gentoo.org> bfr-1.6-r1.ebuild:
  respect CC (bug #243610)

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org> bfr-1.6-r1.ebuild:
  x86 stable

  08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  06 Jun 2005; Tom Martin <slarti@gentoo.org> bfr-1.5.ebuild,
  bfr-1.6.ebuild, bfr-1.6-r1.ebuild:
  Stable 1.6-r1 on sparc, also fix SRC_URI and HOMEPAGE (resolves bug 95193).

  14 Mar 2005; Tom Martin <slarti@gentoo.org> bfr-1.6-r1.ebuild:
  Stable on amd64.

*bfr-1.6-r1 (14 Jan 2005)

  14 Jan 2005; Matthew Kennedy <mkennedy@gentoo.org> +bfr-1.6-r1.ebuild:
  Resolves a problem where nothing is installed: make DESTDIR=${S} should be
  make DESTDIR=${D}

  16 Dec 2004; Markus Rothe <corsair@gentoo.org> bfr-1.6.ebuild:
  Stable on ppc64

  03 Dec 2004; Tom Martin <slarti@gentoo.org> bfr-1.5.ebuild,
  bfr-1.6.ebuild:
  einstall -> make DESTDIR=${D} install

  04 Nov 2004; Markus Rothe <corsair@gentoo.org> bfr-1.6.ebuild:
  Marked ~ppc64; bug #70048

  10 Oct 2004; Tom Martin <slarti@gentoo.org> metadata.xml:
  Changed <herd> from no-herd to shell-tools@gentoo.org.

  06 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> bfr-1.6.ebuild:
  ~sparc

  04 Jul 2004; David Holm <dholm@gentoo.org> bfr-1.6.ebuild:
  Added to ~ppc.

  06 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> bfr-1.6.ebuild:
  ~sparc