@@ -1,28 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX bfr-1.6-perl.patch 326 SHA256 d26184e6f5abe07d93e39e2e491e56d32f3c78307c01488f38fae3c0469569de SHA512 8f65f5113b60a6cbe692b9b2cbf02a7a7b3f046a6a5203cc05cae7a08e1344afd5ababa41608d334d5d1f04afb0eb2bf705622056c5620626805eec41351ffc3 WHIRLPOOL 2d3c77451da6aa9b4ef78d494582a59693d2d89d441ecfbc9a2e528c73522d5ca3fc1fda3925ca4a259ab6e239f4fdd1371f37a1afd44a11b33efc3b9ea06748
 DIST bfr-1.6.tar.bz2 81002 SHA256 9e1168f00a166cb99eb36f9a0ba4f8418919b4ffb9f1841b917426b9b5764d39 SHA512 19939218029219cc328e3efb8e799bb8c755ccff7b8cb81ba0c735d499a48f581aa42322045fdbd153dcfdb8792e84d9fddbfba9e9c5d94675e2830163936762 WHIRLPOOL 336e88b51a45ff065c9dd3ce691574670633b106c4a818441a339463b69562a9cc910ee06bf39e7f57088541b02fe29c46399de87db0bb56d1e8ccc178c62780
 EBUILD bfr-1.6-r1.ebuild 622 SHA256 8d71625f55b7376ee7d6075dc69181b811d3b6af8e5bccda18ffc6c771d24eda SHA512 8eab52433d16be5197aa49da43c52ca63bc14016f8c86e3d7abaf42ae86656a8619d658be2951ab0888b6292fb54a92acd6ad0e5f2e8fd38714cd750cd04a15c WHIRLPOOL 62484a1d0e75b26f30eb6a194c7a98f26d34bd9af2635ffb42e93653998468b9829e8de323200ba9db49f13ffbc9c8a7f37e7af351b37f830b1fa8fa391ce220
-EBUILD bfr-1.6-r2.ebuild 551 SHA256 2a7e6e93e8a59eede06e0e73afdd7d032ce4fc5e7fef4cd75f36c28fa2a9500a SHA512 8a4745762e05f053ca6b3a8b2d2bf39c34439822cca91fa74c2d427cce39c31ab1d3c1c6a571d6c69017929666aafeba22978c9e5c8b44eb2fd4ae68cbe9e953 WHIRLPOOL a9d833a9d9c125addd03dd155c183cb34fe8305935c0d1f5c778717fc8ef3b26285363a1d9d2312fdc7a3e36ee981b0043799298915244cdc472a45b1deb6520
-MISC ChangeLog 2700 SHA256 d6d507c960d0bf178723ab1e7bed0f7fcb224ed86e2a252b0a3bfac24826e2e2 SHA512 cbf89afdbd83e28acdf7b7e9415b5f5a4f90b0b78a3a9ac07e95451ea6aef11b03dd713387aff4982ee9cd5c8a4800c31a68486a2626f9c6dfbb8002514e7008 WHIRLPOOL e62933e19670f2c05c4e612a284091d7779cae81684971ba6efc7856b6b93d7652cda97365b61855892a9b61353ab6760943ab835a0e9e19269c474e8e8d23e9
+EBUILD bfr-1.6-r2.ebuild 566 SHA256 1f9ead7bcb1fc230066618901dfcfbec9814759bf9d17965980ec1d0ef5fd200 SHA512 ee30d07cec49a08cc2ab10e023722de52c802fff7d8200621837e42dca1b655e295c338c4f703a696ae24c7f039a803514d07d3d56f1813a01edf5eca2935a93 WHIRLPOOL 18b167059e72bcfba1d047dddefe72470f6847c8d92d01a08651ca0fb35dad1da0c7769e812e6e056be596f83cd988aa6b7cae2864e64465a6eb9b04d0c31044
+MISC ChangeLog 2797 SHA256 a2acdd9a6085f210ec7c98c18b4d06fe2b0f919ba7d348f2ff5b7ed0e254329f SHA512 20dfb41960475bc3298c80bf27f440b702c9873ce9e3c0ccc3757aa43dbb194c639df4ef50e005357ab87753886b3ff93e1192a4a48c5338336ea05795c9dcbf WHIRLPOOL 395a968ab0c700e7aea8e23af3996038b0becc3685b78aa3493da9e45d7be74b9949c3cbb58f2d493e6afef75fd72c0f0c00c02ee796d9c2ec84f97266dd4082
 MISC metadata.xml 166 SHA256 064eb80cc86913e2a47d1088f1b0ebd5b64b5dab1c73d38b8501cd77891cfbbf SHA512 3fc05bf28a906b223e9bb5baeac755dd7e4edb755b5a6c054c3e4d46d294f28df948e1195e71d5a836783daefafa53fe1417aacc0ba17dd49e9b10d51e99c275 WHIRLPOOL 814a3f6a650e4373ac90ba43969b8dab3215f5da936ef5e180fe134adc05a571dc1390c80be173797c421de7f22488b19979353f7aa52536bbfcf6e0541bf748
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJUOo7nXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirdf0QAItb+7qGy0tw24n+OxBbLyEa
-P0RrrcX25esEpgNz1rqKNzqQN/RL9nUh00qtsT6wy3rwlapi6s3SJ0UrSRAwyFYT
-NXWE4ZfUJRa2E3bmOepcP5dWxiwtHqJa/+/a+5lyglWh+1IgY0xvRc2N+mjheRVA
-Eq8c+uj73WZ3iy+iQEf4PW87j2VFcApTx5a4dhuy7moc2juInhiRNgGcProlup0K
-I61b2YrQvRefRrimrIisahRBVVpRI0u7OC4mKX1k1oEkdcJyN+i0nKjIS1gny4Ky
-MCjiolmrKWKeb3tyI/jeAUgF9ts66pjOf/LhITXmkoRsxBKKi74CwJ1EI2S4D7yI
-SuTQzv3G0DEVRDJBI0ebkhaf2NpioQtqU4wG4wj+vR9iPLZGRfD0ltBiBGDkann4
-9K35o1ySdcZiS9+AFjw20X7Z63kAQAPbLQhLcJ6JhcnKbyC0F5JFDOO3vfCkj0dr
-v94ACUCVGMb2er4BSo4/EiVVC67aOdB0OoWVP0viofMqTvQtfqYJEtl25XarxUUM
-UFHM8xmajJ8c+djwdweCY6GfQD0BDgvgImQ9GLIb9Rgn9q5n2vUm3BVpoU4BNZ0e
-ZXf/QxjVuXgqnCL9ik8PeaxM/BRz0mx+yMR8xMQDhu5Oun2nWRmK1pSEtSbZ7XC8
-NH8HmUnG0r/9S6mZCsLa
-=JCQo
+iEYEAREIAAYFAlRaGwsACgkQVWmRsqeSphMsqgCfdayaNxpDIMVODVFg38QmNVwO
+zOIAn2pOunZlalrb4ULlqO2YpvoEAWFg
+=2aey
 -----END PGP SIGNATURE-----
