@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/bfr/bfr-1.6-r2.ebuild,v 1.1 2014/10/12 14:23:34 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/bfr/bfr-1.6-r2.ebuild,v 1.2 2014/11/05 12:41:46 jer Exp $
 
 EAPI=5
 
@@ -13,7 +13,8 @@ SRC_URI="http://www.glines.org/bin/pk/${P}.tar.bz2"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
-IUSE=""
+
+DEPEND="dev-lang/perl"
 
 src_prepare() {
 	epatch "${FILESDIR}"/${P}-perl.patch
