@@ -1,4 +1,5 @@
 DEFINED_PHASES=prepare
+DEPEND=dev-lang/perl
 DESCRIPTION=General-purpose command-line pipe buffer
 EAPI=5
 HOMEPAGE=http://www.glines.org/software/bfr
@@ -7,4 +8,4 @@ LICENSE=GPL-2
 SLOT=0
 SRC_URI=http://www.glines.org/bin/pk/bfr-1.6.tar.bz2
 _eclasses_=eutils	c91a1ac3fefc6b077094fb2e82c65af4	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=e923ae0be7c575def9400357dc1a3770
+_md5_=fcf2aede8929ede18c0571e44e83b176
